<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tips_title"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone"
            android:background="#ff0000"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="5px"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:text="@string/tips_title"
                android:textColor="@color/black"/>
                   
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dialog_sport_end_line_color"
            android:visibility="gone"
            android:id="@+id/titlebar_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/positiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:gravity="center"
                android:text="@string/sure"
                android:textSize="15sp"
                android:textColor="@color/dialog_sport_end_text_color"
                android:layout_weight="1"
                android:visibility="visible"
                android:background="@drawable/common_diglog_bg"
                android:textAllCaps="false"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:visibility="visible"
                android:id="@+id/bottom_line"/>
            <Button
                android:id="@+id/negativeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/dialog_sport_end_text_color"
                android:textSize="15sp"
                android:layout_weight="1"
                android:background="@drawable/common_diglog_bg"
                android:textAllCaps="false"/>


        </LinearLayout>
    </LinearLayout>
</FrameLayout>