<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/refresh_view"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.kuyou.smartwristband.MainActivity"
android:orientation="vertical">

    <TextView
        android:id="@+id/tvContectDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_14"
        android:text="-----"/>

    <View style="@style/divider_horizontal_style"/>

    <LinearLayout
        android:id="@+id/ll_step"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/size20dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_step"
            android:layout_gravity="left|center_vertical"/>

        <TextView
            android:id="@+id/tv_step_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/font_18"
            android:layout_gravity="center"
            android:text="-"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_14"
            android:layout_marginRight="10.0dip"
            android:layout_gravity="right|center_vertical"
            android:text="@string/uint_step"/>
    </LinearLayout>

    <View style="@style/divider_horizontal_style"/>

    <LinearLayout
        android:id="@+id/ll_heart_rate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/size20dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_heart_rate"
            android:layout_gravity="left|center_vertical"/>

        <TextView
            android:id="@+id/tv_heart_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/font_18"
            android:layout_gravity="center"
            android:text="-"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_14"
            android:layout_marginRight="10.0dip"
            android:layout_gravity="right|center_vertical"
            android:text="@string/uint_heart_rate"/>
    </LinearLayout>

    <View style="@style/divider_horizontal_style"/>

    <LinearLayout
        android:id="@+id/ll_blood_pressure"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/size20dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_blood_pressure"
            android:layout_gravity="left|center_vertical"/>

        <TextView
            android:id="@+id/tv_blood_pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textSize="@dimen/font_18"
            android:text="-/-"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_14"
            android:layout_marginRight="10.0dip"
            android:layout_gravity="right|center_vertical"
            android:text="@string/uint_blood_pressure"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        style="@style/divider_horizontal_style"/>

    <LinearLayout
        android:id="@+id/ll_device_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/size20dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left|center_vertical"
            android:src="@mipmap/ic_device_info"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.93"
            android:orientation="vertical"
            android:gravity="left">

            <TextView
                android:id="@+id/tv_device_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_12"
                android:text="@string/contenct_device_info_none"/>

            <TextView
                android:id="@+id/tv_device_info_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_12"
                android:visibility="gone"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivState"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1.07"
            android:layout_gravity="center_vertical|left"
            android:scaleType="fitStart"
            android:src="@mipmap/device_rssi_1" />

    </LinearLayout>

    <View style="@style/divider_horizontal_style"/>

    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/scanDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/normal_font_color"
            android:background="@drawable/btn_bg_color"
            android:onClick="toScanBindDevice"
            android:text="@string/bound_wristband"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_scan2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/scanDevice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:gravity="center"
            android:textColor="@color/normal_font_color"
            android:background="@drawable/btn_bg_color"
            android:onClick="toTraceActivity_Simple"
            android:text="轨迹算法测试"/>

        <Button
            android:id="@+id/scanDevice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:gravity="center"
            android:textColor="@color/normal_font_color"
            android:background="@drawable/btn_bg_color"
            android:onClick="toTraceActivity_Upload"
            android:text="显示轨迹图"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_device_info_mac"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:gravity="center"/>

</LinearLayout>